# gioitstechnology.github.io

./: README.md  index.html  main.js  pw.html
assets/data/: 0.json  1.json  2.json  3.json  4.json
assets/scripts/: main.js
assets/styles/: style.css  style_main.css
code/c/: CMakeLists.txt  README.md  main.c
code/python/: README.md  manutenzioni_dashboard.py
